--- a/9 - Additional exercises/Module 4/deployment.yaml
+++ b/9 - Additional exercises/Module 4/deployment.yaml
@@ -1,13 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: hello-world
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world-app
-  namespace: hello-world
   labels:
     app: hello-world-app
 spec:
@@ -18,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        app: hello-world-app
+        app: hello-world
     spec:
       containers:
         - name: hello-world-app
@@ -62,25 +57,3 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-world-app
-  namespace: hello-world
-  labels:
-    app: hello-world-app
-spec:
-  ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 3000
-  selector:
-    app: hello-world-app
-  type: LoadBalancer
-  externalTrafficPolicy: Cluster
-status:
-  loadBalancer:
-    ingress:
-      - hostname: localhost
